--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,36 @@ html {
   background-color: #eaeaff;
 }
 
+#inicio {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#inicio > div {
+  padding: 3%;
+  margin-top: 3%;
+  border-radius: 5px;
+  font: 1.25em sans-serif;
+}
+
+#inicio > section {
+  display: flex;
+  padding-top: 3%;
+  justify-content: center;
+  align-items: center;
+}
+
+input[type="submit"] {
+  background-color: #00bfaa;
+  border: none;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font: 1.25em sans-serif;
+}
+
 .main {
   width: 100%;
   height: 100vh;
@@ -67,7 +97,7 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  border: 1px solid #00f;
+  border: 1px solid #0f0;
   flex-grow: 2;
   width: inherit;
   height: max-content;
@@ -78,7 +108,7 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  border: 1px solid #0f0;
+  border: 1px solid #00f;
   flex-grow: 4;
   width: inherit;
   height: max-content;
@@ -137,7 +167,7 @@ html {
 .prc > div > div {
   height: inherit;
   margin: 0;
-  background-color: rgb(255, 187, 0)
+  background-color: rgb(255, 187, 0);
 }
 
 .icons {
