--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,10 @@ html {
   background-color: #eaeaff;
 }
 
+h2 {
+  font-size: 1.724vw;
+}
+
 #inicio {
   display: flex;
   flex-direction: row;
@@ -29,14 +33,37 @@ html {
   align-items: center;
 }
 
+#nuevo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3% auto;
+  width: 50%;
+  padding: 2rem 0;
+  border: rgba(180, 180, 180, 0.8) solid 1px;
+  border-radius: 10px;
+}
+
+#nuevo > div {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1rem;
+}
+
+#nuevo > div > * {
+  margin: 1rem auto;
+  font: 1.5vw sans-serif;
+}
+
 input[type="submit"] {
   background-color: #00bfaa;
   border: none;
   color: #fff;
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  font: 1.25em sans-serif;
+  font: 1.5vw sans-serif;
 }
 
 .main {
